# silto

./: .cursorrules  .gitignore  ARCHITECTURE.md  README.md  create-icon.py  create-icons.py  generate-icon.js  icon-generator.html  index.html  package.json  pnpm-lock.yaml  popup.html  premium-icon.html  regenerate_icons.py  tsconfig.json  vite.config.ts
.agent/skills/project-rules/: SKILL.md
.agent/skills/ui-ux-pro-max/: SKILL.md
.github/workflows/: main.yml
src/: App.vue  EditorWindow.vue  SimpleEditor.vue  i18n.ts  main.ts  popup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  migration.rs  models.rs  notification.rs  tray.rs
src/components/: ConfirmDialog.vue  NoteEditor.vue  NoteForm.vue  NoteList.vue  PopupView.vue  Settings.vue  TodoEditor.vue  TodoForm.vue  TodoList.vue  WindowControls.vue
src/components/ui/: Button.vue  DateTimePicker.vue  Input.vue  LiquidGlassTabs.vue  RichTextEditor.vue  RichTextEditorInner.vue  Textarea.vue
src/components/ui/tabs/: Tabs.vue  TabsContent.vue  TabsList.vue  TabsTrigger.vue
src/composables/: useNotes.ts  useSettings.ts  useTodos.ts
src/lib/: utils.ts
src/locales/: en-US.json  zh-CN.json
src/styles/: index.css
src/types/: index.ts
